--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="header" class="is-hidden-mobile">
                 <a aria-hidden="true" tabindex="-1" href="/IgnoreMe"></a>
                 <div class="header-breadcrumbs is-hidden-mobile">
-                    <a href="/"><img src="arxxxiv.png" alt="arxxiv logo" style="height:40px;"></a> <span>&gt;</span> <a
+                    <a href="/"><img src="arxxxiv.png" alt="arxxxiv logo" style="height:40px;"></a> <span>&gt;</span> <a
                         href="/list/cs/recent">cs</a>
                     <span>&gt;</span> arxxxiv:2509.09xxx
                 </div>
@@ -58,8 +58,8 @@
 
             <div class="mobile-header">
                 <div class="columns is-mobile">
-                    <div class="column logo-arxxiv"><a href="/"><img
-                                src="/static/browse/0.3.4/images/arxxiv-logomark-small-white.svg" alt="arxxxiv logo"
+                    <div class="column logo-arxxxiv"><a href="/"><img
+                                src="arxxxiv.png" alt="arxxxiv logo"
                                 style="height:60px;"></a></div>
                     <div class="column nav" id="toggle-container" role="menubar">
                         <button class="toggle-control"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
@@ -97,7 +97,6 @@
                         <div class="header-breadcrumbs-mobile">
                             <strong>arxxxiv:2509.09xxx</strong> (cs)
                         </div>
-                        <link rel="stylesheet" type="text/css" href="/abs.css">
                         <div id="content-inner">
                             <div id="abs">
                                 <div class="dateline">
@@ -153,7 +152,7 @@
                                             </tr>
                                             <tr>
                                                 <td class="tablecell label">Cite as:</td>
-                                                <td class="tablecell arxxivid"><span class="arxxivid"><a
+                                                <td class="tablecell arxxxivid"><span class="arxxxivid"><a
                                                             href="/abs/2509.09xxx">arxxxiv:2509.09xxx</a>
                                                         [cs.AI]</span></td>
                                             </tr>
@@ -171,20 +170,13 @@
                         </div>
 
                         <div class="submission-history">
-                            <h2>Submission history</h2> From: therealZpoint [<a href="/show-email/3ef61b59/2509.09xxx"
-                                rel="nofollow">view email</a>] <br>
+                            <h2>Submission history</h2> From: therealZpoint <br>
                             <strong>[v1]</strong>
                             Thu, 18 Sep 2025 16:03:03 UTC (4,406 KB)<br>
                         </div>
                     </div>
                     <!--end leftcolumn-->
                     <div class="endorsers">
-                        <a href="/auth/show-endorsers/2509.09xxx" class="endorser-who" rel="nofollow">Which authors of
-                            this paper are endorsers?</a> |
-                        <a id="mathjax_toggle" href="javascript:setMathjaxCookie()">Disable MathJax</a> (<a
-                            href="https://info.arxxiv.org/help/mathjax.html">What is MathJax?</a>)
-                        <span class="help"
-                            style="font-style: normal; float: right; margin-top: 0; margin-right: 1em;"></span>
                     </div>
                 </div>
             </div>
