--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header>
             <a href="#content" class="is-sr-only">Skip to main content</a>
             <!-- start desktop header -->
-            <div class="columns is-vcentered is-hidden-mobile" id="cu-identity">
+            <div class="columns is-vcentered" id="cu-identity">
 
 
                 <div class="column" id="support-ack">
